Fix top button spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -69,10 +69,10 @@ h4 {
     }
 }
 .infoBtn {
-	left: 40%;
+	left: 35%;
 }
 .refreshBtn {
-    left: 38%;
+    left: 35%;
 }
 .info {
 	display: none;
